# bemore

./: .gitignore  LICENSE  demo.py  format.sh  pyproject.toml  setup.py
.github/workflows/: python-package.yml
bemore/: __init__.py  math.py
bemore/boolean/: basic.py
bemore/control_flow/: basic.py  for_loop.py  if_condition.py
bemore/core/: code_gen.py  connectors.py  logging.py  node.py  system.py  system_nodes.py  typing.py
bemore/io/: console.py  utils.py
bemore/math/: basic.py
bemore/types/: __init__.py  basic.py  operators.py
noodle/: __init__.py  math.py
noodle/boolean/: basic.py
noodle/cli/: logging.py
noodle/control_flow/: basic.py
noodle/core/: connectors.py  logging.py  node.py  system.py  type_checking.py
noodle/io/: console.py
noodle/math/: basic.py
noodle/types/: __init__.py  basic.py  operators.py
tests/core/: test_connectors.py
tests/system/control_flow/: test_control_flow.py  test_for_loops.py  test_if_conditional.py
tests/system/math/: test_basic.py
tests/unit/core/: test_connectors.py
